bug 02 fixing page content overflow causing nav to move form fixed position

--- a/_sass/foundation/header.scss
+++ b/_sass/foundation/header.scss
@@ -10,8 +10,9 @@
     width: 100%;
     margin: 0 auto;
     height: $header-height;
+    // box-shadow: 5px 5px 5px whitesmoke;
 
-    box-shadow: 5px 5px 5px whitesmoke;
+    border-bottom: 1px solid whitesmoke;
 }
 
 .header-nav {
