--- a/_sass/foundation/page.scss
+++ b/_sass/foundation/page.scss
@@ -5,10 +5,10 @@
 
 .page-header {
     margin: 0 auto;
-    width: 900px;
+    width: 100%;
 }
 
 .page-content {
     margin: 0 auto;
-    width: 900px;
+    width: 100%;
 }
