--- a/_sass/foundation/post.scss
+++ b/_sass/foundation/post.scss
@@ -1,5 +1,7 @@
 
 .post-container {
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin: 0 auto;
 }
 
@@ -7,7 +9,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     margin: 0 auto;
-    max-width: 900px;
+    width: 100%;
 }
 
 .post-content {
@@ -17,7 +19,7 @@
 
 .video-iframe {
     margin: 0 auto;
-    width: 100%;
+    width: 98%;
     height: 500px;
 }
 
